Resolves: tdf#103543 disable mass broadcasts from drawing objects' changes

Specifically the a11y listeners are nasty bottle necks. A11y will get
updated on paint/view. We're touching all objects on that drawing page
to reposition so interdependencies that need to be broadcasted should
not happen.

Change-Id: Ic80446e22422a3097281ba20eecf0a078ac6a7cb